<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sel_teams"
            android:id="@+id/sel_teams"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnAddTeam"
            android:src="@android:drawable/ic_menu_add"
            android:background="@color/color_bg"
            android:onClick="onClick"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_gravity="right" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/sel_tv_team1_name"
            android:text="@string/team1"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/sel_team1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/versus"
            android:id="@+id/vs"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="13dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/sel_tv_team2_name"
            android:text="@string/team2"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/sel_team2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_game"
                android:id="@+id/sel_games"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/btnAddGame"
                android:src="@android:drawable/ic_menu_add"
                android:background="@color/color_bg"
                android:onClick="onClick"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="1dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/relativeLayout2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnAddMatch"
                android:id="@+id/container">

            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_match"
            android:id="@+id/btnAddMatch"
            style="@style/Base.ThemeOverlay.AppCompat.Dark"
            android:onClick="onClick"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnAddMatch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout2">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/btnDelGame"
                android:src="@android:drawable/ic_menu_delete"
                android:background="@color/color_bg"
                android:onClick="onClick"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:focusableInTouchMode="false"
                android:scaleType="centerCrop"
                android:layout_above="@+id/btnAddMatch"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="DATE"
                android:id="@+id/date_match"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:onClick="onClick"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Date:"
                android:id="@+id/textView5"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>